# goish

./: .gitignore  COOKBOOK.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROGRESS.md  PROMPT.md  README.md  REFERENCES.md
.github/workflows/: ci.yml
docs/: scheduler.md
examples/: config.rs  hello.rs  id_newtype_demo.rs  literals.rs  pipeline.rs  slice_index_demo.rs  transpiled_hello.rs  webscrape.rs  webserver.rs  worker.rs
examples/gostring_prototype/: Cargo.toml  gostring.rs
examples/gostring_prototype/.memsearch/memory/: 2026-04-16.md
goish-macros/: Cargo.toml
goish-macros/src/: lib.rs
src/: _map.rs  _slice.rs  bufio.rs  bytes.rs  chan.rs  clone_dyn.rs  cmp.rs  consts.rs  container.rs  context.rs  crypto.rs  defer.rs  errors.rs  flag.rs  fmt.rs  goroutine.rs  gostring.rs  hash.rs  hex.rs  html.rs  io.rs  iter.rs  json.rs  lib.rs  log.rs  maps.rs  math.rs  mime.rs  os.rs  path.rs  rand.rs  range.rs  regexp.rs  runtime.rs  slices.rs  sort.rs  strconv.rs  strings.rs  struct_macro.rs  sync.rs  (+6 more)
src/chan/: engine.rs  mod.rs
src/container/: heap.rs  list.rs  mod.rs  ring.rs
src/crypto/: md5.rs  mod.rs  sha1.rs  sha256.rs
src/encoding/: base64.rs  binary.rs  csv.rs  hex.rs  json.rs  mod.rs
src/goroutine/: mod.rs
src/hash/: crc32.rs  fnv.rs  mod.rs
src/math/: mod.rs
src/mime/: mod.rs  multipart.rs
src/net/: mail.rs  mod.rs  netip.rs  smtp.rs  textproto.rs  url.rs
src/net/http/: body.rs  client.rs  cookie.rs  mod.rs  request.rs  response.rs  server.rs  status.rs
src/os/: exec.rs  mod.rs
src/path/: filepath.rs  mod.rs
src/sync/: atomic.rs  mod.rs
src/text/: mod.rs  scanner.rs  tabwriter.rs  template.rs
src/unicode/: mod.rs
tests/: bufio_scan_test.rs  bufio_test.rs  bytes_test.rs  chan_bench.rs  chan_runtime_test.rs  chan_test.rs  clone_dyn_test.rs  cmp_test.rs  container_heap_test.rs  container_list_test.rs  container_ring_test.rs  context_test.rs  crypto_md5_test.rs  crypto_sha1_test.rs  crypto_sha256_test.rs  custom_error_test.rs  encoding_base64_test.rs  encoding_binary_test.rs  encoding_csv_test.rs  encoding_hex_test.rs  filepath_match_test.rs  filepath_path_test.rs  fmt_errors_test.rs  fmt_fmt_test.rs  fmt_stringer_test.rs  goexit_and_append_test.rs  hash_crc32_test.rs  hash_fnv_test.rs  html_test.rs  http_client_serve_test.rs  http_request_test.rs  http_response_test.rs  io_test.rs  iter_test.rs  itoa_test.rs  json_decode_test.rs  json_encode_test.rs  maps_test.rs  math_rand_test.rs  math_test.rs  (+38 more)
transpiler/: .gitignore  README.md  go.mod  imports.go  main.go  transpile.go
transpiler/testdata/: errortype_emit.go  frictions_27_36.go  hello.go  interface_emit.go  path_test.go  ptr_receiver.go  struct_embedded_ptr.go  struct_multifield.go  v0_20_4_features.go
