[workspace]
members = ["goish-macros"]

[package]
name = "goish"
version = "0.4.2"
edition = "2021"
rust-version = "1.70"
authors = ["Chanwit Kaewkasi <chanwit@gmail.com>"]
description = "Write Rust using Go idioms — a Go-flavored standard library for Rust"
repository = "https://github.com/chanwit/goish"
homepage = "https://github.com/chanwit/goish"
documentation = "https://docs.rs/goish"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["go", "golang", "idioms", "stdlib", "port"]
categories = ["development-tools", "rust-patterns", "api-bindings"]
exclude = [
    "refs/*",
    "/.claude/*",
    "/.memsearch/*",
]

[dependencies]
# Runtime: tokio + flume.
#   - tokio::task::spawn_blocking backs the `go!{}` macro: sync bodies run
#     on tokio's pooled blocking threads (vs fresh std::thread per spawn).
#   - flume backs Chan<T>: winner of v0.5 channel bake-off (see commit
#     b996384 — 2× faster rendezvous, 3.5× less RSS vs async-channel).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
goish-macros = { version = "0.4.2", path = "goish-macros" }
flume = { version = "0.11", default-features = false, features = ["async"] }
serde = "1"
serde_json = "1"
regex = "1"

[lib]
path = "src/lib.rs"

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "config"
path = "examples/config.rs"

[[example]]
name = "literals"
path = "examples/literals.rs"

[[example]]
name = "worker"
path = "examples/worker.rs"

[[example]]
name = "pipeline"
path = "examples/pipeline.rs"

[[example]]
name = "webscrape"
path = "examples/webscrape.rs"
