[package]
name = "goish-macros"
version = "0.6.0"
edition = "2021"
rust-version = "1.70"
authors = ["Chanwit Kaewkasi <chanwit@gmail.com>"]
description = "Internal proc-macros for goish — rewriters for go!{} bodies and the select! macro"
repository = "https://github.com/chanwit/goish"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full", "visit-mut"] }
quote = "1"
